Prevent overlapping elevation shadows

--- a/client/src/views/components/sidebar/sidebar.scss
+++ b/client/src/views/components/sidebar/sidebar.scss
@@ -1,4 +1,6 @@
 .sidebar{
+  z-index: 70;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
